...
    }
    
    private let offerView1: OfferView = {
        let view = OfferView()
        view.widthAnchor.constraint(equalToConstant: 130).isActive = true
        view.translatesAutoresizingMaskIntoConstraints = false
        view.accessibilityIdentifier = "Offer1View"
        return view
    }()

    private let offerView2: OfferView = {
        let view = OfferView()
        view.widthAnchor.constraint(equalToConstant: 130).isActive = true
        view.translatesAutoresizingMaskIntoConstraints = false
        view.accessibilityIdentifier = "Offer2View"
        return view
    }()
    
    private let divider: UIView = {
        let view = UIView()
        view.widthAnchor.constraint(equalToConstant: 1).isActive = true
...
